version/0.22/_sources/api/solver/_autosummary/settings/velocity_accom_coefficient.rst.txt
:orphan:

.. _velocity_accom_coefficient:

velocity_accom_coefficient
==========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.velocity_accom_coefficient.velocity_accom_coefficient
    :show-inheritance:

.. rubric:: Attributes

=========================   ====================================================

Attribute                                                                Summary

=========================   ====================================================
:ref:`option <option_12>`       Select method for calculating material property.

:ref:`value <value_11>`                     Specify the constant property value.

=========================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

